--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "src\\": "src/"
+            "": "src/"
         },
         "classmap": [
             "app/AppKernel.php",
@@ -38,7 +38,8 @@
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/phpstan-symfony": "^1.3",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "ext-http": "*"
     },
     "scripts": {
         "symfony-scripts": [
