--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
         "phpstan/phpstan-strict-rules": "^1.5",
         "phpstan/phpstan-symfony": "^1.3",
         "symfony/profiler-pack": "^1.0",
-        "ext-http": "*"
+        "symfony/browser-kit": "*",
+        "symfony/css-selector": "*"
+
     },
     "scripts": {
         "symfony-scripts": [
