commit symfony version

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,9 @@
 security:
     encoders:
-        App\AppBundle\Entity\User: bcrypt
+        harsh:
+            algorithm: bcrypt
+            cost: 15
+
 
     providers:
         doctrine:
@@ -22,7 +25,7 @@ security:
                 always_use_default_target_path:  true
                 default_target_path:  /
             logout: ~
-            logout_on_user_change : true
+
 
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
