commit symfony version 3

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "App\\": "src/"
         },
         "classmap": [
-            "app/AppKernel.php",
+            "src/AppKernel.php",
             "app/AppCache.php"
         ]
     },
