--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "phpstan/phpstan-symfony": "^1.3",
         "symfony/profiler-pack": "^1.0",
         "symfony/browser-kit": "*",
-        "symfony/css-selector": "*"
+        "symfony/css-selector": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.4"
 
     },
 
