--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,13 @@
 
     },
 
+    "scripts": {
+        "incenteev-parameters": {
+            "file": "app/config/parameters.yml",
+            "keep-outdated": true
+        }
+    },
+
     "extra": {
         "symfony-app-dir": "app",
         "symfony-bin-dir": "bin",
