--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,11 @@
         "symfony/swiftmailer-bundle": "^3.0",
         "symfony/monolog-bundle": "^3.0",
         "symfony/polyfill-apcu": "^1.0",
-        "sensio/framework-extra-bundle": "^5.0"
+        "sensio/framework-extra-bundle": "^5.0",
+        "symfony/orm-pack": "^2.3",
+        "doctrine/cache": "^1.13",
+        "symfony/security-acl": "^3.3",
+        "doctrine/doctrine-migrations-bundle": "^3.1"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^4.0",
@@ -39,7 +43,8 @@
         "symfony/profiler-pack": "^1.0",
         "symfony/browser-kit": "*",
         "symfony/css-selector": "*",
-        "doctrine/doctrine-fixtures-bundle": "^3.4"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/maker-bundle": "^1.39"
 
     },
 
