--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/security-acl": "^3.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "symfony/flex": "^1.20",
-        "doctrine/annotations": "^1.14"
+        "doctrine/annotations": "^1.14",
+        "ext-pdo": "*"
     },
 
     "require-dev": {
