--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,7 +1,7 @@
 # This file is auto-generated during the composer install
 parameters:
-    database_host: 127.0.0.1
-    database_port: null
+    database_host: localhost
+    database_port: '8080'
     database_name: todo_list
     database_user: root
     database_password: 1234
