--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,10 +39,18 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver: pdo_mysql
-        # if the url option is specified, it will override the above config
-        url: mysql://root:1234@127.0.0.1:3306/todo_list
-        # the DBAL driverClass option
+        default_connection: default
+        connections:
+            default:
+                dbname: todo_list
+                user: root
+                password: 1234
+                host: localhost
+                server_version: '5.6'
+#        driver: pdo_mysql
+#        # if the url option is specified, it will override the above config
+#        url: mysql://root:1234@127.0.0.1:3306/todo_list
+#        # the DBAL driverClass option
     orm:
         auto_mapping: true
         # the standard distribution overrides this to be true in debug, false otherwise
