--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "symfony/flex": "^1.20",
         "doctrine/annotations": "^1.14",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "symfony/twig-bundle": "*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
 
     "require-dev": {
