--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -23,6 +23,7 @@ framework:
     default_locale:  "%locale%"
     trusted_hosts:   ~
     session:
+        name: SESSION_PHP
         # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
         handler_id:  session.handler.native_file
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
@@ -67,6 +68,3 @@ doctrine_migrations:
         # Default (SQL table) metadata storage configuration
         table_storage:
             table_name: 'migration_versions'
-
-
-
