--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -18,10 +18,10 @@ services:
     public: true
     class: App\AppBundle\Manager\TaskManager
     arguments: ["@doctrine.orm.entity_manager"]
-  App\AppBundle\Fixtures\DataFixtures:
+  App\Fixtures\DataFixtures:
     public: true
-    class: App\AppBundle\Fixtures\DataFixtures
-    tags: ["@doctrine.fixture.orm","@security.user_password_encoder.generic"]
+    class: App\Fixtures\DataFixtures
+    tags: ["@doctrine.fixture.orm","@security.user_password_encoder.generic","@doctrine.orm_entity_manager"]
 
 
 
