--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,4 +21,7 @@
       <directory>tests</directory>
     </testsuite>
   </testsuites>
+  <logging>
+    <log type="coverage-text" target="php://stdout"/>
+  </logging>
 </phpunit>
