--- a/composer.json
+++ b/composer.json
@@ -15,43 +15,53 @@
     },
     "require": {
         "php": "^7.4.26",
-        "doctrine/common": "2.*",
-        "doctrine/doctrine-bundle": "2.1.*",
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "doctrine/cache": "^1.11",
+        "doctrine/common": "2.13",
+        "doctrine/dbal": "^2.13.9",
+        "doctrine/doctrine-bundle": "^2.3.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "2.7.*",
+        "doctrine/persistence": "^1.3.3",
+        "doctrine/sql-formatter": "^1.0.1",
         "fzaninotto/faker": "^1.9",
         "incenteev/composer-parameter-handler": "^2.0",
         "liip/test-fixtures-bundle": "^1.9",
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "5.1.*",
-        "symfony/browser-kit": "5.1.*",
-        "symfony/console": "5.1.*",
-        "symfony/css-selector": "5.1.*",
-        "symfony/dotenv": "5.1.*",
-        "symfony/expression-language": "5.1.*",
+        "symfony/asset": "*",
+        "symfony/browser-kit": "*",
+        "symfony/cache": "5.2.12",
+        "symfony/config": "^5.3.0",
+        "symfony/console": "*",
+        "symfony/css-selector": "*",
+        "symfony/dependency-injection": "*",
+        "symfony/doctrine-bridge": "5.1",
+        "symfony/dotenv": "*",
+        "symfony/expression-language": "*",
         "symfony/flex": "^1.0",
-        "symfony/form": "5.1.*",
-        "symfony/framework-bundle": "5.1.*",
-        "symfony/http-kernel": "5.1.*",
-        "symfony/monolog-bundle": "^3.1",
+        "symfony/form": "*",
+        "symfony/framework-bundle": "*",
+        "symfony/http-foundation": "*",
+        "symfony/http-kernel": "*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/security-bundle": "5.1.*",
-        "symfony/security-csrf": "5.1.*",
-        "symfony/stopwatch": "5.1.*",
-        "symfony/translation": "5.1.*",
-        "symfony/twig-bundle": "5.1.*",
-        "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*",
+        "symfony/security-bundle": "*",
+        "symfony/security-core": "*",
+        "symfony/security-csrf": "*",
+        "symfony/stopwatch": "*",
+        "symfony/translation": "*",
+        "symfony/twig-bundle": "*",
+        "symfony/validator": "*",
+        "symfony/yaml": "*",
         "theofidry/alice-data-fixtures": "^1.3",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/extra-bundle": "*",
+        "twig/twig": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpunit/phpunit": "9",
-        "symfony/maker-bundle": "^1.21",
+        "symfony/maker-bundle": "^1.15",
         "symfony/phpunit-bridge": "^6.3",
         "symfony/web-profiler-bundle": "5.*"
     },
@@ -82,7 +92,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "5.1.*"
+            "require": "5.4.*"
         }
     }
 }
