--- a/composer.json
+++ b/composer.json
@@ -24,39 +24,54 @@
         "doctrine/orm": "2.7.*",
         "doctrine/persistence": "^1.3.3",
         "doctrine/sql-formatter": "^1.0.1",
+        "friendsofphp/proxy-manager-lts": "^1.0",
         "fzaninotto/faker": "^1.9",
         "incenteev/composer-parameter-handler": "^2.0",
         "liip/test-fixtures-bundle": "^1.9",
+        "psr/container": "^1.1",
+        "psr/event-dispatcher": "^1.0",
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "*",
-        "symfony/browser-kit": "*",
+        "symfony/asset": "5.4.*",
+        "symfony/browser-kit": "5.4.*",
         "symfony/cache": "5.2.12",
         "symfony/config": "^5.3.0",
-        "symfony/console": "*",
-        "symfony/css-selector": "*",
-        "symfony/dependency-injection": "*",
+        "symfony/console": "5.4.*",
+        "symfony/contracts": "^2.5",
+        "symfony/css-selector": "5.4.*",
+        "symfony/dependency-injection": "5.4.*",
         "symfony/doctrine-bridge": "5.1",
-        "symfony/dotenv": "*",
-        "symfony/expression-language": "*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/expression-language": "5.4.*",
+        "symfony/filesystem": "5.4.*",
         "symfony/flex": "^1.0",
-        "symfony/form": "*",
-        "symfony/framework-bundle": "*",
-        "symfony/http-foundation": "*",
-        "symfony/http-kernel": "*",
+        "symfony/form": "5.4.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/http-foundation": "5.4.*",
+        "symfony/http-kernel": "5.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/polyfill-apcu": "^1.0",
-        "symfony/security-bundle": "*",
-        "symfony/security-core": "*",
-        "symfony/security-csrf": "*",
-        "symfony/stopwatch": "*",
-        "symfony/translation": "*",
-        "symfony/twig-bundle": "*",
-        "symfony/validator": "*",
-        "symfony/yaml": "*",
+        "symfony/polyfill-ctype": "^1.27",
+        "symfony/polyfill-intl-grapheme": "^1.27",
+        "symfony/polyfill-intl-icu": "^1.27",
+        "symfony/polyfill-intl-idn": "^1.27",
+        "symfony/polyfill-intl-normalizer": "^1.27",
+        "symfony/polyfill-mbstring": "^1.27",
+        "symfony/polyfill-php73": "^1.27",
+        "symfony/polyfill-php80": "^1.27",
+        "symfony/polyfill-php81": "^1.27",
+        "symfony/polyfill-uuid": "^1.27",
+        "symfony/security-bundle": "5.4.*",
+        "symfony/security-core": "5.4.*",
+        "symfony/security-csrf": "5.4.*",
+        "symfony/stopwatch": "5.4.*",
+        "symfony/translation": "5.4.*",
+        "symfony/twig-bundle": "5.4.*",
+        "symfony/validator": "5.4.*",
+        "symfony/yaml": "5.4.*",
         "theofidry/alice-data-fixtures": "^1.3",
         "twig/extra-bundle": "*",
-        "twig/twig": "*"
+        "twig/twig": "^2.13|^3.0.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
