--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "9",
         "symfony/maker-bundle": "^1.15",
         "symfony/phpunit-bridge": "^6.3",
