--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require": {
         "php": "^7.4.26",
+        "composer/xdebug-handler": "^2.0",
         "doctrine/cache": "^1.11",
         "doctrine/common": "2.13",
         "doctrine/dbal": "^2.13.9",
@@ -70,11 +71,11 @@
         "symfony/validator": "5.4.*",
         "symfony/yaml": "5.4.*",
         "theofidry/alice-data-fixtures": "^1.3",
-        "twig/extra-bundle": "*",
+        "twig/extra-bundle": "v3.7.*",
         "twig/twig": "^2.13|^3.0.4"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
+        "friendsofphp/php-cs-fixer": "^2.19",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "9",
         "symfony/maker-bundle": "^1.15",
